force-app/main/default/objects/Contract_Overage__c/Contract_Overage__c.object-meta.xml
<CustomObject>
    <label>Contract Overage</label>
    <nameField>
        <label>Contract Overage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Overages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>