force-app/main/default/objects/Contract_Overage__c/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agreement</label>
    <referenceTo>TSGADX__Agreements__c</referenceTo>
    <relationshipLabel>Contract Overages</relationshipLabel>
    <relationshipName>Contract_Overages</relationshipName>
    <type>Lookup</type>
</CustomField>