force-app/main/default/objects/Contract_Overage__c/fields/Contract_Meter_Group__c.field-meta.xml
<CustomField>
    <fullName>Contract_Meter_Group__c</fullName>
    <label>Contract Meter Group</label>
    <length>64</length>
    <type>Text</type>
</CustomField>