force-app/main/default/objects/Contract_Overage__c/fields/EA_Overage_Id__c.field-meta.xml
<CustomField>
    <fullName>EA_Overage_Id__c</fullName>
    <label>EA Overage Id</label>
    <length>16</length>
    <type>Text</type>
</CustomField>