force-app/main/default/objects/Contract_Overage__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipment</label>
    <referenceTo>TSGADX__Equipment__c</referenceTo>
    <relationshipLabel>Contract Overages</relationshipLabel>
    <relationshipName>Contract_Overages</relationshipName>
    <type>Lookup</type>
</CustomField>