force-app/main/default/objects/Contract_Overage__c/fields/Overage_Method__c.field-meta.xml
<CustomField>
    <fullName>Overage_Method__c</fullName>
    <label>Overage Method</label>
    <length>32</length>
    <type>Text</type>
</CustomField>