force-app/main/default/objects/Contract_Overage__c/fields/Overage_Number__c.field-meta.xml
<CustomField>
    <fullName>Overage_Number__c</fullName>
    <label>Overage Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>