force-app/main/default/objects/Contract_Overage__c/fields/Overage_Rate__c.field-meta.xml
<CustomField>
    <fullName>Overage_Rate__c</fullName>
    <label>Overage Rate</label>
    <precision>14</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>