force-app/main/default/objects/Contract_Overage__c/fields/Overage_Type__c.field-meta.xml
<CustomField>
    <fullName>Overage_Type__c</fullName>
    <label>Overage Type</label>
    <length>16</length>
    <type>Text</type>
</CustomField>