force-app/main/default/objects/Contract_Overage__c/fields/Range_Ending__c.field-meta.xml
<CustomField>
    <fullName>Range_Ending__c</fullName>
    <label>Range Ending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>